# cpp-dedicated

./: CMakeLists.txt  main.cpp
math/: karatsuba.cpp  karatsuba.h
tests/: testkaratsuba.cpp  testkaratsuba.h
